--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.487.0",
     "motion": "^12.10.5",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^3.0.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0"
   },
