--- a/package.json
+++ b/package.json
@@ -1,47 +1,50 @@
 {
-  "name": "pims-client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-dropdown-menu": "^2.1.12",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-separator": "^1.1.6",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@tanstack/react-query": "^5.81.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.487.0",
-    "motion": "^12.10.5",
-    "next": "15.2.4",
-    "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "recharts": "^3.0.2",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@tanstack/react-query-devtools": "^5.81.5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.2.5",
-    "typescript": "^5"
-  }
+	"name": "pims-client",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.13",
+		"@radix-ui/react-dropdown-menu": "^2.1.12",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-popover": "^1.1.13",
+		"@radix-ui/react-select": "^2.2.4",
+		"@radix-ui/react-separator": "^1.1.6",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@tanstack/react-query": "^5.81.5",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
+		"date-fns": "^4.1.0",
+		"lucide-react": "^0.487.0",
+		"motion": "^12.10.5",
+		"next": "15.2.4",
+		"next-themes": "^0.4.6",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"recharts": "^3.0.2",
+		"sonner": "^2.0.3",
+		"tailwind-merge": "^3.2.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@tanstack/react-query-devtools": "^5.81.5",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.2.4",
+		"tailwindcss": "^4",
+		"tw-animate-css": "^1.2.5",
+		"typescript": "^5"
+	},
+	"overrides": {
+		"react-is": "^19.0.0-rc-69d4b800-20241021"
+	}
 }
